# lcboot

./: README.md  pyproject.toml
.ci/: bookworm.py  image.py  inspect.py  mount-idmapped.py  packages.py  task.concourse.yml
.github/workflows/: main.yml
.old/: rbind.py
python3/: __init__.py
python3/_runtime/: __init__.py  id_map.py
python3/_runtime/common/: __init__.py  lazy_attributes.py  property_collector.py
python3/_runtime/system_calls/: __init__.py  exit.py  pivot_root.py  unshare.py
python3/scripts/: __init__.py  initctl.py  overlay.py  tolerant.py
python3/scripts/init/: __init__.py  __main__.py  _cli.py  _config.py  _run.py  _setup_algorithm.py
python3/scripts/init/_setup_algorithms/: __init__.py
python3/scripts/init/_setup_algorithms/libvirt/: __init__.py  lxc.py
